# grepath

./: Cargo.toml  README.md  error.txt
.github/workflows/: check-cargo.yml  release.yml
src/: args.rs  main.rs  output.rs
src/grep/: mod.rs  params.rs
src/grep/tests/: eslint.rs  mod.rs  tsc.rs
