[package]
name = "grepath"
version = "0.0.3"
edition = "2021"
authors = ["kqito"]
description = "Extract paths effortlessly from your command outputs with grepath"
repository = "https://github.com/kqito/grepath"
homepage = "https://github.com/kqito/grepath"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities", "text-processing", "parsing", "utilities"]
keywords = ["path", "command-line", "grep", "regex", "extract", "files", "cli"]

[badges]
github = { repository = "kqito/tiny-typescript-transpiler", workflow = "Rust" }

[dependencies]
anyhow = { version = "1.0.82" }
regex = "1.10.4"
thiserror = "1.0.61"
argh = "0.1.10"
atty = "0.2.14"

[dev-dependencies]
pretty_assertions = "1.4.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "kqito/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Whether to install an updater program
install-updater = false

